TP-1911 fix tag wrapping style

--- a/public/themes/custom/palvelumanuaali/components/01-atoms/forms/fields/_fields.scss
+++ b/public/themes/custom/palvelumanuaali/components/01-atoms/forms/fields/_fields.scss
@@ -603,3 +603,7 @@
     gap: 3rem;
   }
 }
+
+.field--name-field-level {
+  display: flex;
+}
