--- a/public/themes/custom/palvelumanuaali/components/05-pages/content-types/_service.scss
+++ b/public/themes/custom/palvelumanuaali/components/05-pages/content-types/_service.scss
@@ -392,9 +392,6 @@
     @include large {
       margin-bottom: $space-two-and-half;
     }
-    .field__items {
-      @extend .text-normal;
-    }
   }
 
 
